# 10xSprintMaster

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SOURCES.md  index.html  package-lock.json  package.json  postcss.config.js
src/: audio.rs  event_bus.rs  main.rs  services.rs  state.rs
src/components/: board.rs  clock.rs  game.rs  human.rs  messages.rs  mod.rs  modal.rs  stage.rs  task.rs
src/data_transfer/: mod.rs  payload.rs
styles/: board.css  bug.css  human.css  main.css  modal.css  status.css  tutorial.css
