[package]
name = "gameoff2021-10x-sprint-master"
publish = false
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.56"

[[bin]]
name = "10xprintmaster"
path = "src/main.rs"

[features]

default = []

[dependencies]
getrandom = { version = "0.2.3", features = ["js"] }
gloo-console = "0.2.0"
gloo-timers = "0.2.1"
js-sys = "0.3.55"
rand = "0.8.4"
rand_distr = "0.4.2"
rand_pcg = "0.3.1"
serde = { version = "1.0.130", features = ["rc"] }
serde_json = "1.0.68"
serde_qs = "0.8.5"
wasm-bindgen = "0.2.78"
web-sys = {version = "0.3.55", features = ["HtmlAudioElement", "HtmlMediaElement"]}
yew = "0.18.0"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = 'z' 
# link time optimization using using whole-program analysis
lto = true
